# timbreprint

./: .gitignore  DESIGN.md  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
docs/: audio-tagging-models.md  local-model-setup.md
src/: main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/components/ui/: audio-player.tsx  badge.tsx  button.tsx  card.tsx  slider.tsx
workers/: audio_analysis.py  mock_analysis.py  requirements.txt  test_audio_analysis.py
